import org.openapitools.generator.gradle.plugin.tasks.GenerateTask

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.12'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.openapi.generator' version '7.20.0'
}

java {
    group = 'dev.razafindratelo'
    version = '1.0.0'
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    maven {
        name = "GitHubPackages"
        url = uri("https://maven.pkg.github.com/Abega1642/airtel-money-client")
        credentials {
            username = System.getenv("GITHUB_ACTOR") ?: project.findProperty("gpr.user") ?: ""
            password = System.getenv("GITHUB_TOKEN") ?: project.findProperty("gpr.key") ?: ""
        }
    }
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.83'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.16'

    implementation 'org.owasp.encoder:encoder:1.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'commons-io:commons-io:2.21.0'
    implementation 'org.apache.commons:commons-compress:1.28.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation 'org.apache.commons:commons-compress:1.28.0'
    testImplementation 'org.springframework.security:spring-security-test'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'io.swagger.core.v3:swagger-annotations:2.2.45'
    implementation 'io.swagger.core.v3:swagger-annotations:2.2.45'

    implementation 'dev.razafindratelo:airtel-money-client-gen:1.0.0'
}

tasks.named('test') {
    useJUnitPlatform()

    systemProperty "testcontainers.reuse.enable", "true"
    systemProperty "testcontainers.cleanup.enabled", "true"
    systemProperty "testcontainers.checks.disable", "true"


    jvmArgs(
            '-XX:+EnableDynamicAgentLoading',
            '-Djdk.instrument.traceUsage=false',
            '-Xshare:off'
    )

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }
}

tasks.register('generateJavaClient', GenerateTask) {
    generatorName = "java"
    inputSpec = file("${projectDir}/doc/api.yaml").toURI().toString()
    outputDir = layout.buildDirectory.dir("generated/openapi-client").get().asFile.absolutePath
    apiPackage = "dev.razafindratelo.airtel_money_client.api"
    modelPackage = "dev.razafindratelo.airtel_money_client.model"
    invokerPackage = "dev.razafindratelo.airtel_money_client.invoker"

    groupId = "dev.razafindratelo"
    id = "airtel-money-client-gen"
    version = "1.0.0"

    configOptions = [
            serializableModel      : "true",
            serializationLibrary   : "jackson",
            useJakartaEe           : "true",
            dateLibrary            : "java8-localdatetime",
            openApiNullable        : "false",
            hideGenerationTimestamp: "true",
    ]

    library = "restclient"
    skipValidateSpec = false
    logToStderr = true
    generateAliasAsModel = false
    enablePostProcessFile = false
}

compileJava.dependsOn('generateJavaClient')